# mygallery

./: .dockerignore  .gitignore  API_KEY_README.md  DOCKER_USAGE.md  Dockerfile  Dockerfile.amd64  LOCAL_TESTING_GUIDE.md  README.md  README_DEPLOYMENT.md  architecture_analysis.md  backend_implementation.md  build-docker.sh  chatbot-ui.js  chatbot.py  config.py  content.css.map  current_environment.txt  deploy_intranet.sh  direct_chatbot.py  direct_openai.py  docker-compose.yml  docker-test-env.example  document_processor.py  env.example  env_manager.py  file_watcher.py  fix_api_key.py  frontend_implementation.md  gallery-fixed.js  gallery.js  implementation_plan.md  index.html  langchain_helper.py  monitor.py  publish-docker.sh  pyproject.toml  rag_chain.py  requirements-docker-build-amd64.txt  requirements-docker-build.txt  requirements.txt  (+15 more)
.well-known/appspecific/: com.chrome.devtools.json
docs/: README.md
docs/deployment/: docker.md  production.md  testing.md
docs/optimization/: docker-optimization.md
document_processors/: __init__.py  base_processor.py  enhanced_document_processor.py  excel_processor.py  image_processor.py  pdf_processor.py  powerpoint_processor.py  word_processor.py
images/: test_document.docx  test_presentation.pptx  test_spreadsheet.xlsx
scripts/: build-docker.sh  build-optimized.sh  publish-docker.sh
tests/: test-docker-local.sh
