[project]
name = "mygallery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.1.0",
    "langchain==0.3.25",
    "langchain-community==0.3.23",
    "langchain-openai==0.3.16",
    "langchain-core==0.3.58",
    "langchain-text-splitters==0.3.8",
    "langchain-faiss==0.1.1",
    "faiss-cpu==1.11.0",
    "pypdf==5.4.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
    "watchdog==6.0.0",
    "tavily-python==0.7.1",
    "openai==1.77.0",
    "pydantic==2.11.4",
    "psutil==6.1.0",
    "requests==2.32.3",
]
